update Pax Quantity Validation, test interceptors successfully