@@ -7,6 +7,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
@@ -15,6 +16,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -31,32 +33,22 @@ public class SecurityConfiguration {
             "/api-v1/user/login",
             "/api-v1/user/signup",
             "/api-v1/user/refreshtoken",
-            "/api-v1/guest/**",
-            "/write/allow"
+            "/api-v1/guest/**"
             //"/**"
     };
-//    public final AadB2cOidcLoginConfigurer configurer;
-//
-//
-//    public SecurityConfiguration(AadB2cOidcLoginConfigurer configurer) {
-//        this.configurer = configurer;
-//    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http)
             throws Exception {
         JwtAuthenticationConverter authenticationConverter = new JwtAuthenticationConverter();
         authenticationConverter.setJwtGrantedAuthoritiesConverter(new AadJwtGrantedAuthoritiesConverter());
-        http
-                // by default uses a Bean by the name of corsConfigurationSource
-                .cors(withDefaults()).csrf(csrf -> csrf.disable())
+        // by default uses a Bean by the name of corsConfigurationSource
+        http.cors(withDefaults()).csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> {
                     try {
-                        authorize
-                                .requestMatchers(ENDPOINTS_WHITELIST).permitAll()
+                        authorize.requestMatchers(ENDPOINTS_WHITELIST).permitAll()
                                 .anyRequest().authenticated().and().exceptionHandling(handling -> handling
-                                .authenticationEntryPoint(
-                                        (req, rsp, e) -> rsp.sendError(HttpServletResponse.SC_UNAUTHORIZED)))
+                                        .authenticationEntryPoint((req, rsp, e) -> rsp.sendError(HttpServletResponse.SC_UNAUTHORIZED)))
                                 .oauth2ResourceServer()
                                 .jwt()
                                 .jwtAuthenticationConverter(authenticationConverter);
@@ -65,16 +57,15 @@ public class SecurityConfiguration {
                     }
                 }).sessionManagement((session) -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-
         return http.build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PUT", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
